# learn-me-a-haskell

./: LICENSE  README.md
higher-order-functions/: folding.hs  something.hs
intro/: primes.hs
modules/: hexToDec.hs  stock.hs  test.hs
other/: cabal-test.hs  curry.hs  ghc-compile-test.hi  ghc-compile-test.hs  primes.hs  quicksort.hs  recursion.hs  reverse.hs
other/cabal-offline-test-idk-lol/: CHANGELOG.md  cabal-offline-test-idk-lol.cabal
recursion/: quicksort.hs  replace.hs  reverse.hs
starting-out/: baby.hs  fizzbuzz.hs
types-n-typeclasses/: a.txt  toddler.hs
